--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "files.associations": {
         "stdio.h": "c"
     },
-    "C_Cpp.default.compilerPath": "/usr/bin/clang"
+    // "C_Cpp.default.compilerPath": "/usr/bin/clang"
 }
